--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,15 +4,17 @@
 } 
   
   body {
-      background-image: url("../images/light-grey-terrazzo.png");
+      background-image: url("../images/vector-notepad-2111645_1280.png");
       font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
   }
   
   h1{
       text-align: center;
-      padding: 50px;
-      font-size: 125%;
-      font-weight: bolder;
+      padding: 40px;
+      font-size: 200%;
+      font-weight: bold;
+      color: white;
+      font-family: monospace;
       
   }
   
@@ -21,22 +23,27 @@
       font-size: 110%;
       padding-bottom: 25px;
   }
-  
-  .containter {
-      width: 100%;
-      max-width: 950px;
-      margin: 50px;
+
+  p{
+      padding:5.2px;
+  }
+
+  #stats {
+      padding: 2px;
+      margin: 10px 90px;
+      align-content: center;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
   
   
   footer {
-    background-color: #aaa6a6;
+    background-color: white;
     text-align: center;
-    height: 5%;
+    height: 3%;
     width: 100%;
-    border-top: 5px #4aaaa5 solid;
+    border-top: 1px black solid;
     position: fixed;
-    padding-top:5px;
+    padding-top:10px;
     left: 0;
     bottom: 0;
     font-size: 12px;
